# TestTask

./: pyproject.toml
core/: alghorimt.py
